<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemHome"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/profile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/favorite"
            android:title="@string/favorite_restaurants"
            android:icon="@drawable/ic_favorite"/>

        <item
            android:id="@+id/history"
            android:title="@string/order_history"
            android:icon="@drawable/ic_history"/>

        <item
            android:id="@+id/faq"
            android:title="@string/faqs"
            android:icon="@drawable/ic_faqs"/>

        <item
            android:id="@+id/logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_logout"/>
    </group>

</menu>