<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    tools:context=".activity.RegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_foodlovers_round"/>


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="5dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="6dp" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="6dp" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmailAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_mobile"
            android:drawablePadding="5dp"
            android:hint="@string/mobile_number_10_digits"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="6dp" />

        <EditText
            android:id="@+id/etDeliveryAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMobileNumber"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="5dp"
            android:hint="@string/delivery_address"
            android:inputType="textPostalAddress"
            android:maxLines="3"
            android:padding="6dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etDeliveryAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password_min_4_characters"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="6dp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/confirm_password"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="6dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:padding="6dp"
            android:background="@color/colorPrimary"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:background="@color/white"
        android:layout_centerInParent="true">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/progressBar"
            android:text="@string/registering_please_wait"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


</RelativeLayout>
